--- a/my-maven/src/main/webapp/Dockerfile
+++ b/my-maven/src/main/webapp/Dockerfile
@@ -5,7 +5,7 @@ FROM tomcat:10.1
 WORKDIR /usr/local/tomcat/webapps/
 
 # JSP 파일 압축 해제 후 복사
-COPY ./my-page.war /usr/local/tomcat/webapps/
+COPY ../my-page.war /usr/local/tomcat/webapps/
 
 # 컨테이너가 시작될 때 실행될 명령어 지정
 CMD ["catalina.sh", "run"]
